--- a/lula/index.html
+++ b/lula/index.html
@@ -195,7 +195,7 @@
             Lula is prohibited to record videos or audio interviews from jail, so he has been communicating with his supporters through letters. Recently, one of them, entitled “There Is a Right-Wing Coup Underway in Brazil”, was published in the Opinion section of The New York Times.</br></br>
             In the essay, he has denied wrongdoing and claimed to be a victim of government “right-wing forces.” “Millions of Brazilians understand that my jailing has nothing to do with corruption, and they understand that I am where I am merely for political reasons,” he wrote.</br></br>         
             “According to the Brazilian Constitution, the power comes from the people, who elect their representatives. So let the Brazilian people decide. I have faith that justice will prevail, but time is running against democracy”.</br></br>
-            Only time will tell if Lula’s words will be heard and what will be the effect of his fate on his popularity rates, once the intensity of the electoral period fades away.</br></br></br></br> 
+            Only time will tell if Lula’s words will be heard and what will be the effect of his political fate on his popularity rates, once the intensity of the electoral period fades away.</br></br></br></br> 
                 
                 
     </div>
