--- a/terrorism/index.html
+++ b/terrorism/index.html
@@ -28,7 +28,7 @@
                 <p class="credit super-font">BY Júlia Ledur</p>
                 <p class="date sub-font">Published July 26, 2018</p>
                 <p class="body-text sub-font">
-                When the topic is terrorism in New York City, the first thing that comes to everyone’s mind is the 9/11 attacks. It makes sense since they were the deadliest in America’s history, with 1,380 victims. However, the number of attacks targeting the city is surprising. According to data from the Global Terrorism Database, from 1970 to 2016, exactly 448 attacks have taken place in New York, the most targeted city in the US by terrorists by far. The second in the rank is San Juan, in Puerto Rico, with 115 attacks. 
+                When it comes to terrorism in New York City, the first thing that comes to everyone’s mind is the 9/11 attacks. It makes sense since they were the deadliest in America’s history, with 1,380 victims. However, the number of attacks targeting the city is surprising. According to data from the Global Terrorism Database, from 1970 to 2016, exactly 448 attacks have taken place in New York, the most targeted city in the US by terrorists by far. The second in the rank is San Juan, in Puerto Rico, with 115 attacks. 
 
                 </p>
             </div>
