--- a/journalists/index.html
+++ b/journalists/index.html
@@ -39,7 +39,7 @@
             <!-- headline and intro -->
             <div class="col-lg-10">
                 <p class="body-text sub-font">
-                    On Monday, Editora Abril, one of the largest publisher companies in Brazil, discharged 500 employees, 171 of whom were journalists. According to data gathered by <a href="http://passaralhos.voltdata.info/">A Conta dos Passaralhos</a>*, an independent project that tracks layoffs of journalists at media companies in Brazil, this was the industry’s largest mass dismissal in the country since 2012. Along with the layoffs, the group announced the end of 10 publications (magazines and websites). 
+                    On Monday, Editora Abril, one of the largest publishing companies in Brazil, discharged 500 employees, 171 of whom were journalists. According to data gathered by <a href="http://passaralhos.voltdata.info/">A Conta dos Passaralhos</a>*, an independent project that tracks layoffs of journalists at media companies in Brazil, this was the industry’s largest mass dismissal in the country since 2012. Along with the layoffs, the group announced the end of 10 publications (magazines and websites). 
 
                 </p>
             </div>
@@ -80,7 +80,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-10">
                 <p class="label super-font">News outlets that fired<br>the most journalists</p>
-                <p class="label-text super-font">Editora Abril, one of the largest editorial groups in Brazil, leads the rank.</p>
+                <p class="label-text super-font">Editora Abril, one of the largest editorial companies in Brazil, leads the rank.</p>
             </div>
         </div>
 
