--- a/drone-attacks/index.html
+++ b/drone-attacks/index.html
@@ -65,7 +65,7 @@
             <p class="body-text sub-font">
                 <br><br>The missiles are launched on most populated areas, like East Yemen, close to ISIS and Al-Qaeda areas of operation. Within the Obama era, 2012 was the year with the highest number of drone attacks to Yemen, although numbers have rose in more than five times last year compared to 2016. The strikes are also more frequent. While previously to 2017 there were gaps of months with no US attacks, this only happened once since the beginning of 2017.<br><br>
 
-                <br><br><p class="label">Number of attacks per year</p>
+                <br><br><p class="label">Number of drone attacks per year</p>
                 <p class="label-text">Strikes are usually in East Yemen; 2012 was the year with the highest death toll.</p><br><br>
                 </div>
             </div>
