--- a/airplanes-congress/index.html
+++ b/airplanes-congress/index.html
@@ -93,7 +93,7 @@
         <div class="row justify-content-center"> <!-- labels/deszcriptions and three charts for mobile -->
             <div class="col-lg-10"><!-- left -->
                 <p class="label super-font"><span style="background-color: #933C48">How much</span><br>each party spent</p>                 
-                <p class="label-text super-font">Chart descriptiona liquet. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor. </p>
+                <p class="label-text super-font">The largest party in number of representatives, PP spent the most money, followed by PSDB and PTB.</p>
                 <img class="image" src="style/images/airplanes-parties.png" alt="image description">
                 <p class="note sub-font">
                 SOURCE: brasil.io / Portal da Câmara dos Deputados
