updated drones project

--- a/drone-attacks/index.html
+++ b/drone-attacks/index.html
@@ -21,11 +21,17 @@
   </head>
     
   <body>
-        <div class="intro-pic">
+
+        <img class="image" src="style/images/bombed-building.jpg">
+        <div class="top-left">An<br>Aerial<br>War</div>
+         <div class="bottom-right">A man walks to a house damaged during an airstrike from the Saudi-led coalition in Faj Attan village, Sana’a, Yemen. <i>(Reuters / Mohamed al-Sayaghi)</i></div>
+
+
+        <!-- <div class="intro-pic">
         <div class="top-left">An aerial war</div>
         <div class="bottom-right">A man walks to a house damaged during an airstrike from the Saudi-led coalition in Faj Attan village, Sana’a, Yemen. <i>(Reuters / Mohamed al-Sayaghi)</i>
             </div>
-        </div>
+        </div> -->
 
 <div style="background-color: black">
     <div class="container black-bg"><!-- start of the main container-->
@@ -71,7 +77,10 @@
             </div>
         </div>
     </div>
-                    <div class="map-pic"></div><br>
+    
+                    <img class="image" src="style/images/yemen-animated-final-edit.gif">
+
+                    <!-- <div class="map-pic"></div><br> -->
                     <div class="col-lg-7">
                         <h5><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Source:</strong> New America.<br></h5>
                     </div>
