added credit header image

--- a/drone-attacks/index.html
+++ b/drone-attacks/index.html
@@ -164,7 +164,8 @@
             <div class="col-lg-7">
                 <h5><strong>Methodology:</strong> Data was analyzed using Python and QGIS and maps were made on QGIS, Illustrator and Photoshop.<br><br><br>
                 <strong>Notes:</strong> <strong>1.</strong> The animated map and the bar graph are build using two different data sources, because only one of them provides geographical coordinates. 
-                <strong>2.</strong> The map that show Yemen’s areas of control was georeferenced by hand, since requested data from Critical Threats was not provided for this specific project.<br><br><br><br></h5>
+                <strong>2.</strong> The map that show Yemen’s areas of control was georeferenced by hand, since requested data from Critical Threats was not provided for this specific project.<br><br><br>
+                <strong>Credits header image:</strong> Reuters / Mohamed al-Sayaghi.<br><br><br><br></h5>
             </div>
         </div>
    
